Mouse Wheel doesn't detect Multi Window Focus. #39630

Closed
opened 2014-04-07 02:34:22 +02:00 by Doc Holiday · 17 comments

System Information
Win7 64 - Radeon HD 6900

Blender Version
Broken: 2.7 19e627c
Worked: never

Short description of error
When working with multiple Windows, the Focus and Mouse-Click work now excellent. But the Mouse Wheel doesn't.

Exact steps for others to reproduce the error
Open a second Blender Window. Move the Mouse over it and check the Wheel. It don't work until you click on it first.

**System Information** Win7 64 - Radeon HD 6900 **Blender Version** Broken: 2.7 19e627c Worked: never **Short description of error** When working with multiple Windows, the Focus and Mouse-Click work now excellent. But the Mouse Wheel doesn't. **Exact steps for others to reproduce the error** Open a second Blender Window. Move the Mouse over it and check the Wheel. It don't work until you click on it first.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @doc_holiday

Added subscriber: @doc_holiday

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Tested on 64bit Linux, cant redo the bug. maybe windows only.

Tested on 64bit Linux, cant redo the bug. maybe windows only.

Added subscriber: @willi-2

Added subscriber: @willi-2

Yes, you have to click on it first. That's normal. The focus window receives windows messages incl. WM_MOUSEWHEEL

Yes, you have to click on it first. That's normal. The focus window receives windows messages incl. [WM_MOUSEWHEEL ](http://msdn.microsoft.com/en-us/library/windows/desktop/ms645617(v=vs.85).aspx)
Author

I know in previous Blender Versions that Problem was also when clicking the Mouse. This is fixed now. The Wheel should work so as well. Clicking first befor using is not the Workflow of Blender.

The Areas in the second Window already notice the Mouse is hovering above and be marked as active. Is it really impossible to guide the Wheel Movement to the active Area?

Do you work with multiple Windows? I am very happy about this Possibility. But currently i need a second Software like BXMouse to work smooth. It would be nice to do it without.

I know in previous Blender Versions that Problem was also when clicking the Mouse. This is fixed now. The Wheel should work so as well. Clicking first befor using is not the Workflow of Blender. The Areas in the second Window already notice the Mouse is hovering above and be marked as active. Is it really impossible to guide the Wheel Movement to the active Area? Do you work with multiple Windows? I am very happy about this Possibility. But currently i need a second Software like [BXMouse ](http://www.blendpolis.de/viewtopic.php?f=14&t=33457) to work smooth. It would be nice to do it without.

@willi-2 Blender can detect this and does its own kind of sloppy-focus. so events go to the window the mouse is over, even if its not active

@willi-2 Blender can detect this and does its own kind of sloppy-focus. so events go to the window the mouse is over, even if its not active

@ideasman42 Just to clarify: I meant Windows' (OS) windows, not Blender's windows. If we're talking about different OS windows which I was referring to, you'd need a hook to implement this (which of course can apply). In other words, I understood "a second Blender window" as a new Blender instance. Otherwise I take back what I said. :-)

@ideasman42 Just to clarify: I meant Windows' (OS) windows, not Blender's windows. If we're talking about different OS windows which I was referring to, you'd need a hook to implement this (which of course can apply). In other words, I understood "a second Blender window" as a new Blender instance. Otherwise I take back what I said. :-)
Author

Im talking about "View/Duplicate in a new Window" Option. (Or Shift + Click&Drag in a marked Corner.)
Sorry if i explained it to less understandable.

Im talking about "View/Duplicate in a new Window" Option. (Or Shift + Click&Drag in a marked Corner.) Sorry if i explained it to less understandable.

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Added subscriber: @Sergey

Added subscriber: @Sergey

@ThomasDinges, have you been able to redo the issue?

@ThomasDinges, have you been able to redo the issue?

Added subscriber: @djnz

Added subscriber: @djnz

This issue was referenced by adb08def61

This issue was referenced by adb08def613d32185e52fc063f034afa66b62513

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit adb08def61.

Closed by commit adb08def61.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39630
No description provided.