Fix T39630: Mouse Wheel doesn't detect Multi Window Focus